# gateco

./: .gitignore  CLAUDE.md
gateco/apps/backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
gateco/apps/backend/migrations/: env.py
gateco/apps/backend/src/: __init__.py
gateco/apps/backend/tests/: conftest.py  conftest_db.py  test_binding_service.py  test_chunking_service.py  test_connector_adapters.py  test_connector_testers.py  test_embedding_service.py  test_idp_adapters.py  test_ingestion_service.py  test_main.py
gateco/validation_harness/: README.md  pyproject.toml
gateco/validation_harness/fixtures/: principals.yaml
gateco/validation_harness/fixtures/documents/: confidential-acquisition-target.txt  confidential-board-minutes.txt  internal-engineering-design.txt  internal-quarterly-roadmap.txt  public-company-overview.txt  public-product-faq.txt  restricted-compensation-data.txt  restricted-security-audit.txt
gateco/validation_harness/profiles/: ci-aws-iam.yaml  ci-azure.yaml  ci-gcp.yaml  ci-neon.yaml  ci-okta.yaml  ci-pgvector.yaml  ci-pinecone.yaml  ci-qdrant.yaml  ci-supabase.yaml  local-chroma.yaml  local-dev.yaml  local-milvus.yaml  local-opensearch.yaml  local-pinecone-local.yaml  local-pinecone.yaml  local-weaviate.yaml
gateco/validation_harness/scripts/: seed_okta.py
gateco/validation_harness/src/validation_harness/: __init__.py  api.py  capabilities.py  change_manifest.py  cleanup.py  cli.py  config.py  (+7 more)
gateco/validation_harness/tests/: test_capabilities.py  test_config.py  test_models.py  test_profile_adapter_routing.py  test_registry.py  test_scenario_registration.py
(+389 files in other folders)
