[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateco-validate"
version = "0.1.0"
description = "Integration validation harness for Gateco — permission-aware retrieval layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gateco>=0.1.0",
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
gateco-validate = "validation_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/validation_harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
